修改测试脚本

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,11 @@ jobs:
           gist_id: f6be6840739c7c0fc356659d64db96fc
           gist_description: traverseFolder
           file_path: traverseFolderObj.js
+
+      - uses: exuanbo/actions-deploy-gist@v1.1.2
+        with:
+          token: ${{ secrets.GIST_TOKEN }}
+          gist_id: f6be6840739c7c0fc356659d64db96fc
+          gist_description: traverseFolder
+          file_path: index.js
       
